@@ -1,5 +1,3 @@
-DIST kadu-0.6.0.1.tar.bz2 1566609 RMD160 06709d16dd84a10c917fb12ee3dd06eb4ef18879 SHA1 727c5b25b7178f8d947497182da6817c170b7d6a SHA256 5b022f3043b112bbba6115bdf2877ff01d6b3b1342d74db5977fa92b1662d68c
 DIST kadu-0.6.0.2.tar.bz2 1568547 RMD160 2e8952831cada064c1caa65b943b6e44880b39c3 SHA1 efbae7840078eab46c5ac20d6e7397cf1c1457bd SHA256 8e06b554761e39890e48ba723145d4e1e0919cc84fcd978f215a6e2a30f87bfa
-EBUILD kadu-desktop_docking-0.6.0.1.ebuild 261 RMD160 0adfd0566fd1c6795dba20b0a260a9e6582f6438 SHA1 7e46eade734e25ea24431421a89c718d9211eb45 SHA256 a1d7141d5ed127ae4ed2641c6b56b6ae56b9115c0e8adb29d9ec261bc4903d7f
 EBUILD kadu-desktop_docking-0.6.0.2.ebuild 261 RMD160 0adfd0566fd1c6795dba20b0a260a9e6582f6438 SHA1 7e46eade734e25ea24431421a89c718d9211eb45 SHA256 a1d7141d5ed127ae4ed2641c6b56b6ae56b9115c0e8adb29d9ec261bc4903d7f
-MISC ChangeLog 433 RMD160 6aeb2bc34fc73775c6ec05e0740202a683411e6e SHA1 b3f074987687023d2bca0ad0be4542d32d3a45ca SHA256 090555935183757ac6365b3696b66be4db0ac42167fc993d0bbaebaf2ab65e4e
+MISC ChangeLog 540 RMD160 389b7d3a288672a7353d3b17678ca89866a686ee SHA1 a91d6f09abf49428b7cfa1116a6a2157dc0e51b0 SHA256 80755380e56b273a280829f5a8c08c78a18ea7b6db4f3a9409f09c8e5fb490aa
